# HSIFoodIngr-Compression

./: .gitignore  README.md  environment.yml  package-lock.json  pyproject.toml
.cursor/rules/: development_order.mdc  download_plan.mdc  feature-new-band.mdc  feature-zip-compression.mdc  implementation_plan.mdc  project.mdc
data/artifacts/: wavelengths.txt
hsifoodingr/: cli.py
hsifoodingr/download/: dataverse_client.py  downloader.py
hsifoodingr/io/: __init__.py  envi_reader.py  hdf5_writer.py  json_reader.py  rgb_reader.py
hsifoodingr/processing/: __init__.py  ingredient_map.py  inspect.py  manifest.py  mask_builder.py  pipeline.py  progress.py  resample.py  transform.py
hsifoodingr/utils/: __init__.py  archive.py  logging.py  validators.py
