[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsifoodingr-compression"
version = "0.1.0"
description = "HSIFoodIngr-64 dataset compressor to HDF5"
authors = [{ name = "HSI Team" }]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["hyperspectral", "hdf5", "dataset", "food", "segmentation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["hsifoodingr*"]

[tool.ruff]
line-length = 100
